[gd_scene load_steps=10 format=3 uid="uid://yvv83gxofu3f"]

[ext_resource type="Texture2D" uid="uid://rsvfqxt7xe3j" path="res://Assets/Wizard.png" id="1_jgxiw"]
[ext_resource type="Script" path="res://Entities/wizard.gd" id="1_kh63w"]
[ext_resource type="Texture2D" uid="uid://gtgm2cprc1va" path="res://Assets/Firebolt.png" id="2_peanp"]
[ext_resource type="PackedScene" uid="uid://bcon647hv3bcq" path="res://Entities/firebolt.tscn" id="3_irud2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fd37c"]
radius = 4.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74vpa"]
size = Vector2(56, 14)

[sub_resource type="Animation" id="Animation_0ionh"]
resource_name = "Attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireboltSource/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireboltSource/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.45, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_firebolt"
}, {
"args": [],
"method": &"start_attack_cooldown"
}]
}

[sub_resource type="Animation" id="Animation_284x3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireboltSource/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireboltSource/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ktuu1"]
_data = {
"Attack": SubResource("Animation_0ionh"),
"RESET": SubResource("Animation_284x3")
}

[node name="Wizard" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_kh63w")
firebolt_scene = ExtResource("3_irud2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("1_jgxiw")
offset = Vector2(0.5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_fd37c")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(24, -8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_74vpa")

[node name="FireboltSource" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="Sprite2D" type="Sprite2D" parent="FireboltSource"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -5)
texture = ExtResource("2_peanp")
offset = Vector2(0, 0.5)
hframes = 2

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ktuu1")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
